rbx_binary/src/tests/snapshots/rbx_binary__tests__util__default-inserted-modulescript__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: ModuleScript
  class: ModuleScript
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    LinkedSource:
      Type: Content
      Value: ""
    ScriptGuid:
      Type: BinaryString
      Value: ezI3RTM5RkVCLTI3QjctNDNFQy05Mzk4LTA0MTE1Q0Y4NTZCMn0=
    Source:
      Type: String
      Value: "local module = {}\n\nreturn module\n"
    Tags:
      Type: BinaryString
      Value: ""
  children: []
