rbx_binary/src/tests/snapshots/rbx_binary__tests__util__default-inserted-modulescript__encoded.snap
---
source: rbx_binary/src/tests/util.rs
assertion_line: 46
expression: text_roundtrip
---
num_types: 1
num_instances: 1
chunks:
  - Inst:
      type_id: 0
      type_name: ModuleScript
      object_format: 0
      referents:
        - 0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - "\u0000\u0000\u0000\u0000"
  - Prop:
      type_id: 0
      prop_name: LinkedSource
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - ModuleScript
  - Prop:
      type_id: 0
      prop_name: ScriptGuid
      prop_type: String
      values:
        - "{27E39FEB-27B7-43EC-9398-04115CF856B2}"
  - Prop:
      type_id: 0
      prop_name: Source
      prop_type: String
      values:
        - "local module = {}\n\nreturn module\n"
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
  - End

